--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pygame = "^2.0.1"
 black = "^20.8b1"
 pylint = "^2.8.0"
 flake8 = "^3.9.1"
+neovim = "^0.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
